# trinket-m0-template

./: Cargo.toml  README.md
.cargo/: config
